src/objects/NPI_Device_Mapping__c.object
<CustomObject>
    <description>This is a custom reporting object, with data being refreshed from IOD.
This object is used only for reporting.</description>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF Device Name</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>NPI Device Mappings</relationshipLabel>
        <relationshipName>NPI_Device_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NPI_Carrier__c</fullName>
        <label>NPI Carrier</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Country__c</fullName>
        <label>NPI Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Product_Family__c</fullName>
        <label>NPI Product Family</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Product_Name__c</fullName>
        <label>NPI Product Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Region__c</fullName>
        <label>NPI Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Model_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sales_Model_ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>NPI Device Mapping</label>
    <nameField>
        <label>NPI Device Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPI Device Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>